feat: integrate minio to support profile image uploads
